Изменен контроллер для поиска по имени и добавлен контроллер смены роли